import from mozilla upstream: - Bug 871884 - Change text input default in Android browser to capitalize first character in a sentence; r=jchen (b38b9337d24) - Bug 941821 - Suppress a rooting analysis hazard false positive across ForkJoin invocation; r=sfink (9289a3dc712) - bug 941365 - allow moz.build files to control how many files get unified together r=glandium (1d1b048e671) - Bug 941824 - #define MOZ_UNIFIED_BUILD for everything that is compiled in unified mode; r=gps (0b5b0a8cdcb) - Merge m-c to inbound. (eb92d7c6c45) - Backed out changeset a64bdb8671ae (bug 941821) for jit-test failures on a CLOSED TREE (29661a80692) - Bug 941028 - IonMonkey: Don't inline into big functions, r=jandem (52c0f7e66bf) - Bug 941028 - Fix comment, r=jandem (25368242d8d) - Bug 941122: Make nsXBLProtoImplMethod and nsXBLProtoImplProperty handle gray objects properly. r=mccr8, r=smaug (044eb51762f) - bug 941629 - take account of letter-spacing when adding the width of an automatic hyphen to the natural width of a justified line. r=roc (dd54d5dc648) - bug 941638 - cache hyphen width in the gfxFontGroup, to improve layout performance for auto-hyphenated text. r=roc (86ed8740c13) - Bug 941866 - Exclude files which rely on the known bad patterns from unified builds; r=BenWa (86afd352d78) - Bug 938289 - part 1 - add automation support for adding DMD environment variables; r=jmaher (0f8ca584d8d) - Bug 938289 - part 2 - add mochitest support for specifying DMD paths; r=jmaher (6801f5793c0) - Bug 938289 - part 3 - add mach support for running DMD during mochitests; r=gps (1dda81aebea) - Bug 938803 - Improve DNS debugs to show which path is taken in nsHostResolver::ResolveHost r=mcmanus (275393efdc3) - Bug 938803 - Change nsDNSPrefetch and nsHttpChannel::BeginConnect to honor cache bypassing in load flags r=mcmanus (a3c1808d305) - Bug 941833 - mach mercurial-setup should define host fingerprints during repo operations; r=nalexander (f3d929fdf38) - Bug 834243 - Revert to old behavior of holding off from starting the compositor until we have successfully preallocated its EGLSurface - r=snorp (76b65afddbc) - Bug 929506 - Check that the GLContext is not destroyed in MakeCurrent. r=bjacob (6dc80430b87) - Bug 929506 - fix context bug in BasicTextureImage. r=bjacob (fb2c934a9b4) - Bug 900248. Don't assume ThebesLayerBufer will get the buffers it wants. r=mattwoodrow (aea4f9337a1) - Bug 900248. ReleaseTextureResources. r=Bas (e9665e55383) - Bug 900248. Rebuild the d3d9 device. r=Bas (d3441a90be4) - Bug 900248. Don't assume success for effect creation. r=Bas (a5462f4e61b) - Bug 900248. Don't return a d3d9 device from device() if we can't composite. r=Bas (b7fa55c34a4) - Bug 900248. Only create d3d9 device on the main thread. r=Bas (f59c4c9f6d6) - Bug 900248. Reinstate some removed code and don't composite immediately after resetting the device. r=Bas (a44334c0fc9) - Bug 900248. Remove managed pool d3d9 texture use. r=Bas (375333e147f) - Bug 900248. Better handling of device reset and recreation. r=Bas (2832cf73238) - Bug 900248. Move logic for device checking to Ready() and check it at the start of transactions. r=Bas (621f0723d95) - Bug 900248. An extra safety check in TextureD3D9 plus some refactoring around it. r=Bas (3dce33b8c66) - Bug 900248. Handle the add/remove monitor case. r=Bas (9b7f4ecea01) - No bug. Add a missing include to fix bustage in the previous patches. r=me (446f79a12d2) - Bug 941123 - Pre-render content before starting animated zoom [r=botond] (3a3b0a06470) - Bug 941327 - Match scale to scroll offset during zoom animation [r=botond] (18bad3aac61) - Backed out changeset f08ab0578efb (bug 929506) for breaking GLContext during a CLOSED TREE (91b8bccdd1c) - Backed out changeset 7c27af05042e (bug 929506) because it should've been backed out with f08ab0578efb on a CLOSED TREE (93c960dab01) - Backed out changeset 763bcda2802f (bug 834243) for Android bustage on a CLOSED TREE (0ad19cee886) - Bug 940285 - Followup fix the variable order. r=me (899b6528241) - Merge m-c to inbound (0baa2a0d4ed) - Merge m-c to inbound (e2a66724719) - Bug 941311 - Improve GGC pretenuring heuristics, r=terrence,jandem. (c3005f4f45d) - Bug 941931 - Add <algorithm> for VC12 to use std::min. r=cpearce (76985474ec7) - Bug 925599 - Replace other GetVersionEx() uses. r=jimm (8cb6d4b7ee9) - Bug 925599 - Replace gfxWindowsPlatform::WindowsOSVersion(). r=Bas (94e32908ffd) - Bug 925599 - Replace GetVersionEx() in toolkit/. r=bsmedberg (ad49423ee91) - Bug 925599 - Replace WinUtils::GetWindowsVersion() and GetWindowsServicePackVersion(). r=jimm (ed579a7fd30) - Bug 925599 - Replace GetVersion() uses. r=bsmedberg (8c2c9a5c0ab) - Bug 941728 - Build embedding in unified mode. r=bz (e374f133774) - Bug 941732 - Build chrome in unified mode. r=ehsan (66215cc9ce8) - Bug 757726 - Part 6a: Add support for cloaking plugin names in navigator.plugins and navigator.mimeTypes enumeration. r=johns sr=bsmedberg (cf1496031d8) - Bug 757726 - Part 6b: Cloak all plugin names except Flash, Director, Java, and QuickTime. r=johns sr=bsmedberg (a603d9c90c4) - Bug 941889 - Make configure recognize Android 19 tools. r=nalexander (cfec5f4428e) - Bug 938805 - Create standalone oscpResponseGenerator for testing. r=keeler (77a6933e195) - Bug 938437 - Replace nsStaticXULComponents.cpp with smart use of sections. r=bsmedberg,irc-r=decoder,r=nfroyd (86956347ec7) - Bug 941450 - Add some GENERATED_FILES to moz.build. r=gps (2f9d386e67e) - Bug 941475 - Remove old workaround for gcc 3.2.2 (!) on OS/2 (!). r=mshal (9d53a703644) - Bug 941821 -  Fix an exact rooting hazard false positive across ForkJoin invocation; r=sfink (6b6406d739f) - Bug 941424 - Build more of the JS engine in unified mode; r=djvj (f6ce5da2657) - Bug 882130 - In IDBObjectStore, endian swapped data are treated improperly on big endian platform. r=janv (bitrot fixed by stevensn) (281a10c59d5) - Bug 882130 - Additional cleanup. r=bent (feae914859e) - Bug 939608 - Part 2: Build xpconnect in unified mode; r=bholley (64bc15535ed) - Bumping gaia.json for 2 gaia-central revision(s) a=gaia-bump Truncated some number of revisions since the previous bump. (332021f67b2) - Bumping gaia.json for 2 gaia-central revision(s) a=gaia-bump (18ba86a2b7b) - Merge m-c to b2g-inbound (98ca2b2c71a) - Bumping gaia.json for 4 gaia-central revision(s) a=gaia-bump Truncated some number of revisions since the previous bump. (9dfda958960) - Bumping gaia.json for 2 gaia-central revision(s) a=gaia-bump (07d0ab271cf) - Bug 932543 - Check data size before memcpy in BluetoothOppManager, r=gyeh (02f85c47fe4) - Mark the SOURCES variables in media/mtransport moz.build files as non-unifiable, no bug (cf77fb2e39a) - Bug 937412 - Syntax errors in xpcshell tests don't report the error.  r=ted (f0dce08e31d) - Bug 937370 - Errors loading xpcshell test file may be silently discarded. r=ted (e833b2dcf1e) - Bug 941469 - RemoteWebProgress doesn't pass flags param for onLocationChange. r=felipe (3ff2a9909dd) - Bug 941916: Drop unused constructor param "aItems" from SingleLineCrossAxisPositionTracker constructor. r=mats (057b1a461bc) - Bumping gaia.json for 2 gaia-central revision(s) a=gaia-bump (0333c0472ea) - Bumping gaia.json for 2 gaia-central revision(s) a=gaia-bump (d063e0eaaad) - Bumping gaia.json for 2 gaia-central revision(s) a=gaia-bump (55d27ce513c) - Bumping gaia.json for 2 gaia-central revision(s) a=gaia-bump (8d52df8a646) - Bumping gaia.json for 2 gaia-central revision(s) a=gaia-bump (b6d46f26df1) - Bumping gaia.json for 2 gaia-central revision(s) a=gaia-bump (7636d27e5bf) - Bumping gaia.json for 5 gaia-central revision(s) a=gaia-bump (c6835f7642f) - merge b2g-inbound to mozilla-central (311d1a6fd9c) - Merge mozilla-central into holly. (fc94ec1fa57)